samples/_failures_safe/1761695088_b6498f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_416ebadc.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_416ebadc.c:176:13: error: expected declaration or statement at end of input
  176 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_416ebadc.c:176:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_416ebadc.c:176:13: error: expected declaration or statement at end of input
